--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="/" class="header-title link"><span class="header-logo-one">Web</span><span
                         class="header-logo-two">Studio</span></a>
                 <ul class="header-list list">
-                    <li class="header-item"><a href="./studio.html" class="header-item-link link">Студия</a></li>
+                    <li class="header-item"><a href="./studio.html" class="header-item-link link current">Студия</a></li>
                     <li class="header-item"><a href="./portfolio.html" class="header-item-link link">Портфолио</a></li>
                     <li class="header-item"><a href="/" class="header-item-link link">Контакты</a></li>
                 </ul>
