--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="header-contact">
                 <ul class="header-contacts-list list">
                     <li class="header-contacts-item">
-                        <a href="mailto:info@devstudio.com" class="header-item-contacts link" data-modal-open><svg class="icon-one" width="16" height="12"><use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a></li>
+                        <a href="mailto:info@devstudio.com" class="header-item-contacts link"><svg class="icon-one" width="16" height="12"><use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a></li>
                     <li class="header-item">
                         <a href="tel:+380961111111" class="header-item-contacts link"><svg class="icon-second" width="10" height="16"><use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a></li>
                 </ul>
@@ -39,7 +39,7 @@
         <section class="page-hero overlay">
             <div class="container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="hero-btn">Заказать услугу</button>
+                <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         <section class="features">
